--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-CN" data-theme="light">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>OCR识别工具</title>
     <script src="/pdf.js/pdf.min.js"></script>
     <script src="/pdf.js/pdf.worker.min.js"></script>
   </head>
