修改了坐标视图中复制反馈信息的样式

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OCR识别工具</title>
+    <title>OCR文本识别工具</title>
     <script src="/pdf.js/pdf.min.js"></script>
     <script src="/pdf.js/pdf.worker.min.js"></script>
   </head>
