--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="OCR文本识别工具">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <title>OCR文本识别工具</title>
     <script src="/pdf.js/pdf.min.js"></script>
     <script src="/pdf.js/pdf.worker.min.js"></script>
